--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -8,11 +8,16 @@
   padding: 1.25rem;
   margin-bottom: 2rem;
 
-  nav ul {
-    list-style: none;
+  nav {
     display: flex;
-    gap: 1.25rem;
-    padding: 0;
+    justify-content: space-between;
+
+    ul {
+      list-style: none;
+      display: flex;
+      gap: 1.25rem;
+      padding: 0;
+    }
 
     a {
       text-decoration: none;
