Add exercices on scrollTrigger

--- a/src/partials/base-layout.html
+++ b/src/partials/base-layout.html
@@ -18,6 +18,7 @@
         <ul>
           <li><a href="index.html">Animations GSAP</a></li>
           <li><a href="timeline.html">Timeline GSAP</a></li>
+          <li><a href="scroll-trigger.html">ScrollTrigger GSAP</a></li>
         </ul>
         <p>
           📚
