--- a/src/scss/modules/_card.scss
+++ b/src/scss/modules/_card.scss
@@ -78,6 +78,66 @@
       align-items: center;
     }
   }
+
+  &#exercice-scroll-trigger {
+    .item,
+    .brief,
+    .exercise {
+      position: relative;
+      padding: 20px;
+      grid-row: span 3;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 20px;
+      color: black;
+    }
+
+    .brief {
+      background-color: lightgrey;
+    }
+
+    .exercise {
+      justify-content: space-around;
+    }
+
+    .exercise:nth-child(even) {
+      background: linear-gradient(325deg, #a855f7 0%, #db2777 100%);
+    }
+
+    .exercise:nth-child(odd) {
+      background: linear-gradient(325deg, #a855f7 0%, #6366f1 100%);
+    }
+
+    .spacer {
+      grid-column: span 4;
+      grid-row: span 3;
+    }
+
+    .box {
+      width: 20%;
+      aspect-ratio: 1 / 1;
+      opacity: 0.35;
+      background-color: white;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .box.top {
+      align-self: flex-start;
+    }
+
+    .box.bottom {
+      align-self: flex-end;
+    }
+
+    .highlight {
+      opacity: 1;
+      background: linear-gradient(325deg, #10b981 0%, #bef264 100%);
+    }
+  }
 }
 
 @media (min-width: 556px) {
@@ -94,6 +154,10 @@
 
     &#exercice-timeline {
       grid-template-columns: repeat(3, 1fr);
+    }
+
+    &#exercice-scroll-trigger {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 }
